<resources>
    <string name="app_name">Joshua King\'s Sample App</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_header_title">Joshua King</string>
    <string name="nav_header_subtitle">joshua@antechdevelopment.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="demos">Demos</string>
    <string name="share">Share</string>
    <string name="other">Other</string>
    <string name="contact">Contact</string>
    <string name="view_demo">View Demo</string>
    <string name="view_instructions">View Instructions</string>
    <string name="android_first_app_tutorial_title">Android \"First App\" tutorial</string>
    <string name="enter_a_message">Enter a message</string>
    <string name="send">Send</string>
    <string name="title_activity_android_first_app_message_display">View Message</string>
</resources>
