<?xml version="1.0" encoding="utf-8"?><!--android:background="@drawable/side_nav_bar"-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    android:theme="@style/AppTheme.AppBarOverlay">

    <ImageView
        android:id="@+id/navImageView"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:contentDescription="@string/nav_header_desc"
        android:paddingTop="8dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/nav_header_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autoLink="email"
        android:text="@string/nav_header_subtitle" />

</LinearLayout>
